fixed page heights that were causing problems with height 100vh... about lettering on home page now has @medias to change font because the letter was too big then too small using vw as a font size

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ html {
   background-color: black;
 }
 
-body, html {
+body, html, #root {
   width: 100%;
   height: 100%;
   margin: 0;
